--- a/src/App.css
+++ b/src/App.css
@@ -1166,8 +1166,10 @@ h6 {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100%; /* Ensures all cards are the same height */
-  min-height: 400px; /* Adjust based on your design */
+  height: 100%;
+  /* Ensures all cards are the same height */
+  min-height: 400px;
+  /* Adjust based on your design */
   border-radius: 8px;
   overflow: hidden;
   background-color: transparent;
@@ -1175,15 +1177,18 @@ h6 {
 
 .blog-card-img-top {
   width: 100%;
-  height: 200px; /* Set fixed height to maintain consistency */
-  object-fit: cover; /* Ensures image fits within the frame */
+  height: 200px;
+  /* Set fixed height to maintain consistency */
+  object-fit: cover;
+  /* Ensures image fits within the frame */
 }
 
 .blog-card-body {
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: space-between; /* Pushes the button to the bottom */
+  justify-content: space-between;
+  /* Pushes the button to the bottom */
   padding: 16px 0;
 }
 
@@ -1197,18 +1202,21 @@ h6 {
 }
 
 .blog-card-text {
-  flex-grow: 1; /* Ensures text takes available space */
+  flex-grow: 1;
+  /* Ensures text takes available space */
   margin-bottom: 12px;
   font-family: Poppins;
   font-weight: 300;
   font-size: 16px;
   line-height: 24px;
   letter-spacing: 1%;
-  max-height: 72px; /* Prevents excessive content expansion */
+  max-height: 72px;
+  /* Prevents excessive content expansion */
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
-  -webkit-line-clamp: 3; /* Limits text to 3 lines */
+  -webkit-line-clamp: 3;
+  /* Limits text to 3 lines */
   -webkit-box-orient: vertical;
 }
 
@@ -1229,19 +1237,42 @@ h6 {
   margin-top: 1.5rem;
 }
 
-.blog-hr{
-    border: 0;
-    border-top: 2px solid var(--border-color);
-    width: 100%;
-    margin: 1rem 0;
-    padding: 0;
+.blog-hr {
+  border: 0;
+  border-top: 2px solid var(--border-color);
+  width: 100%;
+  margin: 1rem 0;
+  padding: 0;
+}
+
+.blog-end-cta {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  h4 {
+    margin: 0;
+  }
 }
 
 
 @media (max-width: 768px) {
+
+  .blog-end-cta {
+    flex-direction: column;
+    text-align: center;
+
+    button {
+      width: 100%;
+      margin: 0;
+    }
+  }
+
   .blog-grid-container-cards {
     grid-template-columns: repeat(1, auto);
   }
+
   .blog-title {
     margin-bottom: 8px;
     line-height: 36px;
