--- a/src/App.css
+++ b/src/App.css
@@ -1248,10 +1248,15 @@ h6 {
 .blog-end-cta {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   align-items: center;
+  gap: 10px;
+  margin-top: 2rem;
 
   h4 {
+    margin: 0;
+  }
+
+  button {
     margin: 0;
   }
 }
